create login, reset_password, resend_confirmation and confirmation endpoints
