# src/core/dto/user.dto.ts
@@ -15,4 +15,19 @@ export interface UserCreateDto {
     name: string;
     email: string;
     password: string;
+    confirmed_token: string;
+}
+
+export interface UserLoginDto {
+    email: string;
+    password: string;
+}
+
+export interface UserConfirmDto {
+    email: string;
+}
+
+export interface UserResetPasswordDto {
+    token: string;
+    password: string;
 }
